Pint Changelog
==============

0.16 (unreleased)
-----------------

- Nothing changed yet.


0.15 (2020-08-22)
-----------------

- Change `Quantity` and `Unit` HTML (i.e., Jupyter notebook) repr away from LaTeX to a
  simpler, more performant pretty-text and table based repr inspired by Sparse and Dask.
  (Issue #654)
- Add `case_sensitive` option to registry for case (in)sensitive handling when parsing
  units (Issue #1145)
- Implement Dask collection interface to support Pint Quantity wrapped Dask arrays.
- Started automatically testing examples in the documentation
- Fixed an exception generated when reducing dimensions with three or more
  units of the same type
- Fixed right operand power for dimensionless Quantity to reflect numpy behavior. (Issue #1136)
- Eliminated warning when setting a masked value on an underlying MaskedArray.
- Add `sort` option to `formatting.formatter` to permit disabling sorting of component units in format string


0.14 (2020-07-01)
-----------------

- Changes required to support Pint-Pandas 0.1.


0.13 (2020-06-17)
-----------------
- Reinstated support for pickle protocol 0 and 1, which is required by pytables
  (Issue #1036, Thanks Guido Imperiale)
- Fixed bug with multiplication of Quantity by dict (Issue #1032)
- Bare zeros and NaNs (not wrapped by Quantity) are now gracefully accepted by all numpy
  operations; e.g. np.stack([Quantity([1, 2], "m"), [0, np.nan]) is now valid, whereas
  np.stack([Quantity([1, 2], "m"), [3, 4]) will continue raising DimensionalityError.
  (Issue #1050, Thanks Guido Imperiale)
- NaN is now treated the same as zero in addition, subtraction, equality, and
  disequality (Issue #1051, Thanks Guido Imperiale)
- Fixed issue where quantities with a very large magnitude would throw an IndexError
  when using to_compact()
- Fixed crash when a Unit with prefix is declared for the first time while a Context
  containing unit redefinitions is active
  (Issues #1062 and #1097, Thanks Guido Imperiale)